# ide-relay-mcp

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  auto_reply_loop.txt  common.h  eslint.config.js  feedback.cpp  gui.cpp  index.html  mcp.json  package-lock.json  package.json  server.cpp  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: CLIENT_TAB_ID.md  CODE_REVIEW_SNAPSHOT.md  FRONTEND.md  HTTP_IPC.md  RELAY_MCP_SESSION_ID.md  RELEASING.md  SSH_REMOTE_MCP.md  TERMINOLOGY.md
public/: release-badge-preview.html  status-pill-preview.html
scripts/: bump-version.mjs  check-version-sync.mjs  run-vite.mjs
src/: App.vue  cursorRulesTemplates.ts  i18n.ts  ideRulesTemplates.ts  main.ts  style.css  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_reply.rs  config.rs  cursor_usage.rs  dock_edge_hide.rs  gui_http.rs  ide.rs  lib.rs  main.rs  mcp_feedback_enrich.rs  mcp_http.rs  mcp_setup.rs  mcp_wsl_paths.rs  path_persistence.rs  release_check.rs  remote_connection.rs  remote_ssh.rs  server.rs  storage.rs  system_ui.rs  wsl_path_convert.rs
src/components/: IdeSelectionPage.vue  QaAssistantRetellMd.vue  QaReplyAttachments.vue  QaUserSubmittedBubble.vue  RelayComposerInput.vue
src/components/settings/: SettingsAppPanel.vue  SettingsCachePanel.vue  SettingsRemotePanel.vue  SettingsRulePromptsPanel.vue  SettingsUsagePanel.vue
src/composables/: feedbackComposerUtils.ts  useAppStrings.ts  useCursorUsage.ts  useFeedbackWindow.ts  useIdeBinding.ts  useMcpAndPathSettings.ts  useRelayCacheSettings.ts  useReleaseBadge.ts
src/editor/: relayComposerCm.ts
src/locales/: en.ts  zh.ts
src/types/: composer-cm.ts  relay-app.ts
src/utils/: formatBytes.ts  parseRelayFeedbackReply.ts  safeMarkdown.ts
