[package]
name = "relay-mcp"
version = "1.2.0"
edition = "2021"
authors = ["andeya <andeyalee@outlook.com>"]
build = "build.rs"
default-run = "relay"
description = "Human feedback layer for AI IDEs"
license = "MIT"
repository = "https://github.com/andeya/ide-relay-mcp"
homepage = "https://github.com/andeya/ide-relay-mcp"

[[bin]]
name = "relay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "5"
opener = "0.7"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tower-http = { version = "0.5", features = ["limit"] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3"
