[package]
name = "relay-mcp"
version = "1.4.3"
edition = "2021"
authors = ["andeya <andeyalee@outlook.com>"]
build = "build.rs"
default-run = "relay"
description = "Human feedback layer for AI IDEs"
license = "MIT"
repository = "https://github.com/andeya/ide-relay-mcp"
homepage = "https://github.com/andeya/ide-relay-mcp"

[[bin]]
name = "relay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "5"
opener = "0.7"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tower-http = { version = "0.5", features = ["limit"] }
# native-certs: use OS trust store (Windows/macOS/Linux) — better than webpki-roots alone for enterprise MITM roots.
ureq = { version = "2", features = ["json", "native-certs"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
aes = "0.8.4"
cbc = "0.1.2"
pbkdf2 = "0.12.2"
sha1 = "0.10.6"
hmac = "0.12.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
# Release GUI subsystem: attach to parent console for `relay mcp` / `relay feedback` when run from cmd/PowerShell.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security_Cryptography",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"

[dev-dependencies]
tempfile = "3"
